# selector

./: README.md  pytest.ini  selector.py  setup.cfg  tox.ini
src/selector/: __init__.py  dialog.glade  selector.py
