[metadata]
name = selector
version = 0.2
author = Alexander Schlemmer
author_email = alexander@mail-schlemmer.de
description = This is a simple GTK selector with filters
long_description = file: README.md
long_description_content_type = text/markdown
# url
# project_urls
classifiers =
            Programming Language :: Python :: 3
            License :: OSI Approved :: AGPLv3
            Operating System :: OS Independent

[options]
package_dir =
            = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[flake8]
per-file-ignores = __init__.py:F401

[options.entry_points]
console_scripts =
  selector = selector:main
